<resources>
    <string name="app_name">Thor</string>
    <string name="channel_name">Storage Notifications</string>
    <string name="channel_description">For upload and download notifications</string>
    <string name="share">Share</string>
    <string name="no_activity_found_to_handle_uri">No application found which support this kind of file.</string>
    <string name="download_failed">Download failed for \"%1$s\"</string>
    <string name="download_complete">Download complete for \"%1$s\"</string>
    <string name="search">Search</string>
    <string name="file_has_no_write_permission">No \"Write Permission\" on the location</string>
    <string name="download_title">Download Data</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Alter Bookmark</string>
    <string name="bookmark_added">Bookmark \"%1$s\" added</string>
    <string name="bookmark_removed">Bookmark \"%1$s\" removed</string>
    <string name="share_link">Share Link</string>
    <string name="find_page">Find in page</string>
    <string name="history">History</string>

    <string name="documentation">Documentation</string>
    <string name="clear_cache_and_cookies">Clear cache, cookies, history, passwords, etc…</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="authentication">Authentication</string>
    <string name="downloads">Downloads</string>
    <string name="enter_url">Scan-URL or search input</string>
    <string name="action_cleanup">Delete browser data</string>
    <string name="next_page">Next page</string>
    <string name="reload_page">Reload Page</string>
    <string name="download">Download</string>
    <string name="more_options">More options</string>

    <string name="enable_javascript">Enable Javascript</string>
    <string name="redirect_url_support">Redirect URL Support</string>
    <string name="settings">Settings</string>
    <string name="concurrency_value">Concurrency (DHT) [%1$s]</string>
    <string name="restart_config_changed">Please restart the application due to the configuration changes.</string>
    <string name="redirect_index_support">Redirect Index HTML</string>
    <string name="javascript_text">When javascript is disabled, many websites might not work properly.</string>
    <string name="redirect_url_support_text">When this option is enabled, URLs which references IPFS or IPNS content, will be automatically redirected to the local IPFS node. Currently only URLs of the form https://xxx/ipfs/… or https://xxx/ipns/… will be redirected.</string>
    <string name="redirect_index_support_text">If this option is enabled, the local node tries to find an HTML index file for a given ipfs or ipns URL if it is not specified.</string>
    <string name="concurrency_text">The higher the concurrency value, the more aggressively the local node tries to find the requested content. This also consumes more energy.</string>
    <string name="information">Information</string>
    <string name="url_access">The QR-Code contains the URL of the current website</string>
    <string name="scan_url">Scan URL</string>
    <string name="permission_camera_denied">Permission camera</string>
    <string name="feature_camera_required">Feature camera required</string>
    <string name="codec_not_supported">Not supported QR-Code</string>

</resources>
