<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/main">

        <item
            android:id="@+id/action_bookmark"
            android:icon="@drawable/star_outline"
            android:orderInCategory="20"
            android:title="@string/bookmark"
            app:iconTint="@android:color/white"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_bookmarks"
            android:icon="@drawable/bookmark_multiple_outline"
            android:orderInCategory="21"
            android:title="@string/bookmarks"
            app:iconTint="@android:color/white"
            app:showAsAction="ifRoom" />

    </group>

    <group android:id="@+id/main_second">

        <item
            android:id="@+id/action_previous_page"
            android:orderInCategory="23"
            android:title="@string/previous_page"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_next_page"
            android:orderInCategory="24"
            android:title="@string/next_page"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_find_page"
            android:orderInCategory="25"
            android:title="@string/find_page"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_share"
            android:orderInCategory="26"
            android:title="@string/share"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/settings">
        <item
            android:id="@+id/action_history"
            android:orderInCategory="30"
            android:title="@string/history"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_downloads"
            android:orderInCategory="31"
            android:title="@string/downloads"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_cleanup"
            android:orderInCategory="32"
            android:title="@string/action_cleanup"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/additions">
        <item
            android:id="@+id/action_documentation"
            android:orderInCategory="40"
            android:title="@string/documentation"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_issues"
            android:orderInCategory="45"
            android:title="@string/issues"
            app:showAsAction="never" />
    </group>

</menu>